--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   model_viewer_plus: ^1.9.0
   http: ^1.2.2
   uuid: ^4.5.1
+  flutter_html_to_pdf: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
