--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   screenshot: ^3.0.0
   flutter_mjpeg: ^2.0.4
   universal_html: ^2.2.4
+  shared_preferences: ^2.5.2
   #mjpeg_stream: ^0.0.3
   #flutter_gl: ^0.0.21
   #flutter_3d_viewer: ^1.0.0
